--- a/foglio-stile - documentazione.css
+++ b/foglio-stile - documentazione.css
@@ -1,242 +1,254 @@
-button{
-    background-color: #6897BB;
-    border: none;
-    border-radius: 8px;
-    color: white;
-    padding: 10px;
-    font-size: large;
-    text-align: center;
-    text-decoration: none;
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 16px;
-    margin-bottom: 10 px;
-}
-button:hover {
-    background-color: #7166c7;
-}
-.topnav {
-  overflow: hidden;
-  font-family: 'Josefin Sans', sans-serif;
-  background-color: transparent;
-  margin: auto;
-  width: 70%;
-}
+<!DOCTYPE html>
+<html lang="it">
+    <head>
+        <meta>
+    <meta charset="utf-8"><meta author="Martina Castellari"> <meta name="viewport" content="width=device-width, initial-scale=1.0"><html lang="it"></meta>
+        <title>Blue Skies - Big Band</title>
+        <link rel="icon" type="image/x-icon" href="Blue Skies Logo.png">
+        <link rel="stylesheet" href="foglio-stile - documentazione.css">
+        <link rel="stylesheet" href="Blue Skies Media Queries.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=josefin+sans-regular">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=yesevaone-regular"> 
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,300;1,400&display=swap');      
+          </style>
+    </head>
 
-.topnav >.logo:hover {
-  background-color: transparent;
-}
-.topnav-header{
-  position: absolute;
-  margin: auto;
-}
+    <body>
+      <div class="logo">
+        <h2><a href="index.html"> <img src="Blue skies con testo.png" width="300" alt="il logo della Blue Skies Big Band: un sole a forma di disco nascosto da una nuvola"></a></h2></div>
 
-.topnav a {
-  float: left;
-  display: block;
-  font-family: 'Josefin Sans', sans-serif;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  margin: auto;
-}
+        <div class="topnav" id="myTopnav">
+          <a href="index.html" class="active">Home</a>
+          <a href="Chi Siamo.html">Chi Siamo</a>
+          <a href="Attività.html">Attività</a>
+          <a href="Repertorio.html">Repertorio</a>
+          <div class="dropdown">
+            <button class="dropbtn">Introduzione al Jazz
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="#">Storia del jazz</a>
+              <a href="#">Lessico jazz</a>
+            </div>
+          </div> 
+          <a href="#about">Eventi</a>
+          <a href="#about">Contatti</a>
+          <a href="Documentazione.html">Documentazione</a>
+          <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+        </div>
 
-.active {
-  text-decoration: none;
-  color:black;
-}
+          <div class="doc"></div>
 
-.topnav .icon {
-  display: none;
-}
+<div class="container reveal">
+<section>
+        <h1> Documentazione</h1>
 
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
+    <h1>Abstract</h1>
+    <p>Quello della Blue Skies Big Band è un sito che favorisce un progetto sociale fittizio di integrazione sociale tra due generazioni molto diverse, spesso in aperto conflitto ma entrambe sofferenti di un pervasivo senso di solitudine, che in linea con l'ottimistico testo dello standard di Berling, si augura di appianare.
+      Tramite il linguaggio duttile e libero della musica jazz, il mio sito vuole anche promuovere questo genere a chi non vi si è approcciato precedentemente, anche perché intimidito dalla sua complessità.</p>
 
-.dropdown .dropbtn {
-  font-size: 17px;    
-  border: none;
-  outline: none;
-  color: black;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
+ <div class="container reveal">
+    <h2>1. Benchmarking </h2>
+    <hr>
+    <br>
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
+    <h3>1. Obiettivi </h3>
+    <p>La Blue Skies Big Band è un progetto sociale fittizio che prevede la partecipazione degli studenti di alcune scuole di musica bolognesi e gli ospiti della casa di riposo “Henghel Gualdi”. Ispirati dal titolo dello standard di Irving Berlin, il gruppo promuove attraverso la libertà del linguaggio jazz una comunicazione musicale e sociale libera e genuina, da cui entrambe le parti possono trarre benefici emotivi.
+     <p>Gli anziani musicisti possono ritrovare, grazie alla presenza con gli studenti, un contatto con il mondo esterno, mentre i ragazzi possono trovare dei mentori in loro e imparare il valore della solidarietà.</p>
+     <br>
+     <p>Obiettivo secondario del sito è la divulgazione della musica jazz, delle sue tecniche, musicisti e linguaggi, in modo da rendere approcciabile il genere anche a un gruppo di neofiti.</p>
+     
+    <h3>2. Target</h3>
+     <p>Il progetto è indirizzato a tutti, in particolare a ragazzi adolescenti e a giovani adulti (max. 30 anni) studenti di musica che vivono nella Città Metropolitana di Bologna.
+    <p>Passiamo in rassegna alcuni siti che si rivolgono a un pubblico simile o che propongono progetti sociali:</p>
+    
+    <h4><a href="https://chiavidascolto.org"> 1. Scuola di Musica Chiavi d'Ascolto</a></h4>
+   <p>Progetto finanziato dal Comune di Bologna, con sede anche a Castenaso. Rivolta a studenti di ogni età, la scuola offre un ampio ventaglio di servizi, che riguardano il mondo della musica a tutto tondo, con seminari e corsi sia di strumento individuale che di musica d'insieme.</p>
+<h4><a href="https://www.spmii.it/"> 2. Scuola di Musica Popolare Ivan Illich</a></h4>
+   <p>Sito simile al primo ma dalla vocazione sociale ancora più pronunciata: offre corsi di musica svincolata da restrizioni accademiche. Vuole usare la musica come strumento per abbattere le barriere sociali e promuovere una piena integrazione tra chi vi suona.</p>
+  </div>
+<br>
+<br>
+  <div class="container reveal">
+   <h2>2. Struttura e layout</h2>
+   <hr>
+   <br>
+   <br>
+   <h3> 1.Struttura</h3>
 
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  font-family: 'Josefin Sans', sans-serif;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
+   <img src="Blue Skies Diagramma.jpg" alt="Il diagramma del sito Blue Skies" width="800px" class="center"> 
 
-.topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #7c6dd3;
-  color: white;
-}
 
-.dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
-}
+    <h3>2. Wireframe</h3>
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+    <div class="row">
+      <div class="column"><img src="Wireframe Home.png" width="300px"></div>
+      <div class="column"><img src="Wireframe Chi Siamo.png" width="300px"></div>
+      <div class="column"><img src="Wireframe Repertorio.png"width="300px"></div>
+    </div> 
+   </div>
+
+   <br>
+   <br>
    
-body{
-    background-color: whitesmoke;
-    color:black;
-    animation: fadeInAnimation ease 3s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
-
-body, html {
-    height: 120%;
-    margin: 0;
-}
-
-  .reveal{
-    position: relative;
-    transform: translateY(150px);
-    opacity: 0;
-    transition: 1s all ease;
-  }
+   <div class="container reveal">
+    
+    <h2> 3. Linguaggi e strumenti </h2>
+    <hr>
+    <br>
+   <p> Linguaggi di programmazione utilizzati: HTML, CSS, Javascript e Ruby. </p>
+    <p>Programmi utilizzati: Visual Studio Code, Git e Github per la programmazione e per la pubblicazione. Matomo per il conteggio delle visualizzazioni. Pexels per il download delle fotografie presenti nel sito. Procreate e Canva per la creazione di disegni da fatti da me e per la manipolazione delle fotografie.</p>
+    
   
-  .reveal.active{
-    transform: translateY(0);
-    opacity: 1;
-  } 
+    <h3>Look and feel</h3>
+    <p>Ispirati allo stile artistico di molti album e poster di rassegne jazz, ho creato dei disegni che riprendessero le caratteristiche visive dello stile artistico Midcentury, diffuso tra gli anni '50 e '60 del '900. Lo stile usa palette di colori minima ed è basato sulle forme e i contrasti tra le forme dei personaggi e quelle dello sfondo.
+    Il colore blu riprende nome della band, a cui ho affiancato un rosso tenue che possa contrastarlo. La combinazione di colori richiama in maniera velata la città in cui svolge il corso, offrendo anche un approccio estetico che possa distinguere il sito.</p>
+    <br>
+    <p>Ho basato molta parte del linguaggio visivo del sito sull'accessibilità, in particolar modo nei confronti di potenziali utenti con autismo, ADHD, ansia, dislessia e difficoltà visive. Ho quindi optato per un'interfaccia minima, un linguaggio semplice e conciso, dei colori morbidi e ho applicato supporto per visori.</p>
+    <p>Per gli header ho usato il font Yesevaone-regular mentre per i paragrafi il josefin-sans</p>
+    <div class="row">
+      <div class="column">
+          <br>
+      <img src="Blue Skies Concept Brand.png" width="300" margins="auto" alt="un disegno di un grande libro stilizzato">
+       <hr>
+       <br>
+      <p>Una moodboard che mi è stata utile per delineare le caratteristiche principali dello stile estetico per il sito. Come si vede dall'immagine, originariamente anche il giallo faceva parte della palette di colori ma è stato successivamente scartato per rendere il sito più omogeneo.</p>
+    </div>
+      <div class="column"> 
+        <br>
+        <img src="Blue Skies Concept Art.png" width= 300>  
+        <hr>
+        <br>
+      <p>Primi schizzi e studi compiuti per delineare uno stile artistico che rappresenti il sito e la sua estetica.</p>
+       </div>
+  </div> 
+  </div>  
+  </div> 
+</div>
+  <br>
+  <br>
+  <div class="container reveal">
+  <h2>Communication Strategy</h2>
+  <hr>
+   <h3> 1. Background</h3>
+   <p>Online non sono presenti molte iniziative sociali a tema musicale che proponga come servizio principale la visita di giovani ragazzi in una casa di riposo con lo scopo di una collaborazione tra loro e gli ospiti, ponendo quindi enfasi sullo scambio reciproco di idee e conoscenza e il dialogo intergenerazionale.</p>
+   <p>Ciò che più vi si avvicina è la promozione di un progetto di convivenza in una RSA tra giovani e anziani promosso dall'associazione trentina "Cristiani-De Luca", il progetto "TOGETHER" ma è sprovvisto di un sito proprio e non pone centralità sul tema della musica.</p>
+   <h3> 2. Obiettivi comunicativi</h3>
+    <p>Durante la creazione del sito mi sono posta due obiettivi diversi: il primo raggiungimento di almeno 50 visualizzazioni da parte di altrettante persone diverse. Il secondo è il raggiungimento di 10 followers nel profilo Instagram del gruppo.</p>
+    <p>L'obiettivo principale del target sono gli studenti di musica che vivono a Bologna e provincia ma sono ben accetti anche chi ha una conoscenza basilare di uno strumento musicale qualsiasi.</p>
+   
+    <h2> 3. Target audience e messaggio</h2>
+    <hr>
+    <br>
+   
+   <h3>1. Target audience</h3>
+ <br>
+   <p>Nonostante il bacino di utenti del mio sito coinvolga chiunque voglia unirsi al progetto, esso si rivolge principalmente a un target di adolescenti e giovani adulti (massimo 30 anni) che studiano musica, un pubblico che fa un uso massiccio di social network ed è molto sensibile all'arte e ai temi sociali.</p>
+    <p>Il target secondario sono gli adulti neopensionati che vogliono riprendere la pratica del proprio strumento. </p>
+   
+    <h3>2. Quale messaggio trasmette il sito?</h3>
+    <br>
+    <p>Il sito della Blue Skies Big Band vuole trasmettere la concezione di musica come un'entità estremamente libera, duttile, adatta a tutti. Qui viene specificatamente applicata come collante sociale, facendo sensibilizzazione e cercando quindi di attenuare l'incomprensione e la solitudine reciproca sentita dalle fasce più giovani e più anziane della popolazione.</p>
+     <p>Un potenziale ostacolo per la comunicazione può essere il crescente calo d'interesse dei potenziali utenti</p>
+</div>
+<div class="container reveal">
+    <h2>4. Promozione</h2>
+    <hr>
+    <br>
+    <p>Il sito è stato promosso tramite una combinazione tra il passaparola tra l'autrice del sito e gli insegnanti della scuola di musica che frequenta, nonché dei suoi amici. Ho anche collaborato con gli studenti e alcuni insegnanti di una scuola di musica privata di Bologna.</p>
+  </div>
+    <br>
+    <br>
+    <div class="container reveal">
+   <h2> 5. Valutazione dei risultati</h2>
+   <hr>
+   <br>
+   <p>È stato posto ai visitatori del sito un sondaggio in cui si ponevano delle domande tecniche sulla fruizione del sito e sulla ricezione dei temi.
+    Secondo le statistiche di Matomo, il sito ha ampiamente superato il limite prefissato di 50 visite e anche il tempo medio di visita è risultato ottimo. </p>
+    <br>
+    <p>Anche su Instagram si è raggiunto il numero di followers prefissato, con uno degno di nota: la pro loco di Sala Bolognese. </p>
+    <p>Il progetto sembra aver suscitato abbastanza interesse, in particolar modo tra gli utenti del target secondario e il messaggio di fondo sembra essere stato accolto bene, avendo qualche utente chiesto all'autrice del sito se il progetto esistesse veramente ed esprimendo il desiderio di un'effettiva realizzazione di questa idea.</p>
+  <br>
 
-  @keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
+  <div class="row">
+    <div class="column">
+        <br>
+        <img src="Obiettivo visual.png" height="150px" style="@media screen and (max-width: 750px){display: flex; margin: 0;}">
+  </div>
+    <div class="column"> 
+      <br>
+      <img src="Obiettivo Instagram.png" height="200px">
+     </div>
+
+  </div>
+  </p>
+<br>
+<br>
+  
+  <footer>
+          
+    <div class="footer-info">
+      <h4>Seguici sui social</h4>
+      <a href="https://www.instagram.com/blueskiesbologna/"> <img src="Instagram.png" width="30px"></a>
+      <h4>Piazza Maggiore 1, Bologna - Casa di Riposo "Henghel Gualdi", <img src="Blue skies cornetta.png" width="20px"> +39 333 333 333</h4>
+                <h4><img src="Blue skies mail.png" width="20px"> indirizzomail@gmail.com; Partita IVA: IT 000 000 000 00</h4>
+                <h4> &#169; 2023-2024: Martina C.</h4>
+                <br>
+      </div>
+    </footer>
+    </body>
+
+    <script>
+
+
+     function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}  
+
+        function reveal() {
+  var reveals = document.querySelectorAll(".reveal");
+
+  for (var i = 0; i < reveals.length; i++) {
+    var windowHeight = window.innerHeight;
+    var elementTop = reveals[i].getBoundingClientRect().top;
+    var elementVisible = 150;
+
+    if (elementTop < windowHeight - elementVisible) {
+      reveals[i].classList.add("active");
+    } else {
+      reveals[i].classList.remove("active");
     }
-    100% {
-        opacity: 1;
-     }
-}
-  
-h1{
-    font-family: "yesevaone-regular", serif;
-    text-align: center;
-    font-size: xx-large;
-}
-h2 {
-    text-align: center;
-    font-family: "yesevaone-regular", serif; 
-}
-h3{
-  text-align: center;
-  font-family: "yesevaone-regular", serif;
-  font-size: larger;
-}
-
-h4 {
-  text-align: center;
-  text-decoration: none;
-  font-family: 'Josefin Sans', sans-serif;
-}
-
-p {
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: larger;
-  width: 80%;
-  margin: auto;
-}
-
-hr{
-  margin: auto;
-  width: 50%;
-}
-
-a{
-  font-family: 'Josefin Sans', sans-serif;
-  color: #d65b5f;
-  text-decoration: none;
-}
-
-.center{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
-section {
-  background-color: whitesmoke;
-}
-.row {
-    display: flex;
   }
-  
- .column {
-    flex-direction: column;
-    float: left;
-    width: 50%;
-    padding: 10px;
-    column-gap: 1em;
-    text-align: center;
-    background-color: whitesmoke;
-  }
-  .column > p {
-    font-family: 'Josefin Sans', sans-serif;
-    text-align: left;
-    font-weight: 300;
-  }
-
-  .column button {
-    position: center;
-    background-color: #ec7575;
-    border-radius: 8px;
-    margin: auto, 30px;
-  }
-  .column button:hover {
-    background-color: #d65b5f;
-    border-radius: 8px;
-  }
-  
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
- 
-.doc {
-    background-image: url(Blue\ Skies\ Documentazione.png);
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-
-  }
-
-footer{
- position: sticky;
-    background-color: #6897BB;
-    border-top: 2px, #5c6fad;
-    color: white;
-    font-family:'Josefin Sans', sans-serif;
-    text-align: center;
-    font-size: medium;
-    padding-top: 20px;
-    padding-bottom: 10px;
 }
+
+window.addEventListener("scroll", reveal);
+
+function navBarFunction() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', '<Some Property ID A>');
+gtag('config', '<Some Property ID B>');
+gtag('event', 'sign_up', { 'method': 'email' });
+gtag('event', 'view_video', { 'send_to': '<Some Property ID B>' });
+
+        </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=<Some Property ID A>"></script>
+
+        </script>
+</html>
